src/Dllama/llama/ggml.h

    enum ggml_log_level {
        GGML_LOG_LEVEL_ERROR = 2,
        GGML_LOG_LEVEL_WARN  = 3,
        GGML_LOG_LEVEL_INFO  = 4,
        GGML_LOG_LEVEL_DEBUG = 5
    };
    typedef bool (*ggml_abort_callback)(void * data);
    typedef void (*ggml_log_callback)(enum ggml_log_level level, const char * text, void * user_data);