src/deps/misc/cerr_redirector.h

typedef void (*cerr_callback)(const char* text, void* user_data);
__declspec(dllexport) void redirect_cerr_to_callback(cerr_callback callback, void* user_data);
__declspec(dllexport) void restore_cerr();